--- a/example/index.html
+++ b/example/index.html
@@ -2,33 +2,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hello, WebVR! - A-Frame</title>
+    <title>multitouch-look-controls example</title>
     <meta name="description" content="Hello, WebVR! - A-Frame">
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
 
     <script src="https://morandd.github.io/aframe-multitouch-look-controls/multitouch-look-controls.js"></script>
-    
-    <script src="../dans-camera-juggler.js"></script> 
+    <script src="https://morandd.github.io/dans-aframe-camera-juggler/dans-camera-juggler.js"></script>
 
+    <script src="qrcode.min.js"></script>
   </head>
   <body>
-    <a-scene>
+
+    <a-scene dans-camera-juggler="paradigm:freelook">
       <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
 
-      <!-- Look cam. See dans-camera-juggler. Red box underneath it. -->
-      <a-entity id="look_camera" camera="active:true" position="1 3 6" look-controls>
+      <!-- Look cam. See dans-camera-juggler. Red box underneath. -->
+      <a-entity id="camera_look" camera="active:true" position="1 3 6" look-controls>
             <a-box position="0 -1 0" scale="0.3 0.3 0.3" color="#f00"></a-box>
       </a-entity>
 
-      <!-- Multitouch-look cam. See dans-camera-juggler. Blue box underneath -->
-      <a-entity id="touchlook_camera" camera="active:false" position="-2 2 6" multitouch-look-controls>
+      <!-- Multitouch-look cam. See dans-camera-juggler. Blue box underneath. -->
+      <a-entity id="camera_touchlook" camera="active:false" position="-2 2 6" multitouch-look-controls>
             <a-box position="0 1 0" scale="0.3 0.3 0.3" color="#00f"></a-box>
       </a-entity>
 
     </a-scene>
+    <div id="qrcode" style="position:absolute; left:5px; top:5px"></div>
+    <script type="text/javascript">
+    if (!AFrame.utils.device.isMobile()){
+      new QRCode(document.getElementById("qrcode"), "https://morandd.github.io/aframe-multitouch-look-controls/example/");
+    }
+    </script>
+
   </body>
 </html>
