--- a/example/index.html
+++ b/example/index.html
@@ -33,7 +33,7 @@
     </a-scene>
     <div id="qrcode" style="position:absolute; left:5px; top:5px"></div>
     <script type="text/javascript">
-    if (!AFrame.utils.device.isMobile()){
+    if (!AFRAME.utils.device.isMobile()){
       new QRCode(document.getElementById("qrcode"), "https://morandd.github.io/aframe-multitouch-look-controls/example/");
     }
     </script>
