--- a/example/index.html
+++ b/example/index.html
@@ -21,12 +21,12 @@
       <a-sky color="#ECECEC"></a-sky>
 
       <!-- Look cam. See dans-camera-juggler. Red box underneath. -->
-      <a-entity id="camera_look" camera="active:true" position="1 3 6" look-controls>
+      <a-entity id="camera_look" camera="active:true" position="1 3 3" look-controls>
             <a-box position="0 -1 0" scale="0.3 0.3 0.3" color="#f00"></a-box>
       </a-entity>
 
       <!-- Multitouch-look cam. See dans-camera-juggler. Blue box underneath. -->
-      <a-entity id="camera_touchlook" camera="active:false" position="-2 2 6" multitouch-look-controls>
+      <a-entity id="camera_touchlook" camera="active:false" position="-2 2 3" multitouch-look-controls>
             <a-box position="0 1 0" scale="0.3 0.3 0.3" color="#00f"></a-box>
       </a-entity>
 
@@ -34,8 +34,12 @@
     <div id="qrcode" style="position:absolute; left:5px; top:5px"></div>
     <script type="text/javascript">
     if (!AFRAME.utils.device.isMobile()){
-      new QRCode(document.getElementById("qrcode"), "https://morandd.github.io/aframe-multitouch-look-controls/example/");
-    }
+      new QRCode(document.getElementById("qrcode"), {
+        text: "https://morandd.github.io/aframe-multitouch-look-controls/example/",
+        width: 100,
+        height: 100
+      });
+    } // Only show QR code if we're not already on mobile
     </script>
 
   </body>
